--- a/RWAMovies/Views/UserView/LogIn.cshtml
+++ b/RWAMovies/Views/UserView/LogIn.cshtml
@@ -7,7 +7,7 @@
 <h1>Login</h1>
 
 <hr />
-<div class="row">
+<div class="row justify-content-center">
     <div class="col-md-4">
         <form asp-action="LogIn">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -21,14 +21,15 @@
                 <input type="password" asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Login" class="btn btn-primary" />
+            <br />
+            <div class="form-group text-center">
+                <input type="submit" value="Login" class="btn btn-primary w-50" />
             </div>
         </form>
     </div>
 </div>
 
-<div>
+<div class="text-center">
     <a asp-action="Register">Register</a>
 </div>
 
