--- a/RWAMovies/Views/UserView/Register.cshtml
+++ b/RWAMovies/Views/UserView/Register.cshtml
@@ -2,12 +2,13 @@
 
 @{
     ViewData["Title"] = "Register";
+
 }
 
 <h1>Register</h1>
 
 <hr />
-<div class="row">
+<div class="row justify-content-center">
     <div class="col-md-4">
         <form asp-action="Register">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -53,14 +54,14 @@
                 </select>
             </div>
             <br />
-            <div class="form-group">
-                <input type="submit" value="Register" class="btn btn-primary" />
+            <div class="form-group text-center">
+                <input type="submit" value="Register" class="btn btn-primary w-50" />
             </div>
         </form>
     </div>
 </div>
 
-<div>
+<div class ="text-center">
     <a asp-action="LogIn">Sign in</a>
 </div>
 
