--- a/RWAMovies/Views/UserView/UserProfile.cshtml
+++ b/RWAMovies/Views/UserView/UserProfile.cshtml
@@ -34,7 +34,7 @@
                             <div class="mt-3">
                                 <h4>@Html.DisplayFor(model => model.Username)</h4>
                                 <p class="text-secondary mb-1">About me</p>
-                                <p class="text-muted font-size-sm">@Html.DisplayFor(model => model.Country.Name)</p>
+                                <p class="text-muted font-size-sm">@country</p>
                                 @*<button class="btn btn-primary">Follow</button>
                                 <button class="btn btn-outline-primary">Message</button>
                                 *@
